# md_api_reference

./: .gitignore  Cargo.toml  GOALS.md  PLAN.md  README.md
src/: cli.rs  lib.rs  main.rs  model.rs  output.rs  parse.rs  reexport.rs  source.rs
src/model/: mod.rs  paths.rs  reachability.rs
src/render/: assoc.rs  doc_text.rs  links.rs  mod.rs  module.rs  signature.rs  trait_.rs  type_.rs
tests/: golden.rs
tests/fixtures/: dep.json  example.json  facade.json
tests/fixtures/dep/: Cargo.toml
tests/fixtures/dep/src/: lib.rs
tests/fixtures/example/: Cargo.toml
tests/fixtures/example/src/: lib.rs
tests/fixtures/facade/: Cargo.toml
tests/fixtures/facade/src/: lib.rs
tests/golden/example/: Alpha.md  Beta.md  Color.md  Foo.md  Point.md  Reexported.md  Renamed.md  Shape.md  lib.md
tests/golden/example/top/: Bar.md  mod.md
tests/golden/example/top/inner/: Baz.md  mod.md
tests/golden/facade/: Local.md  RenamedGizmo.md  Widget.md  lib.md
tests/golden/facade/sub/: Inner.md  mod.md
