[package]
name = "md_api_reference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rustdoc-types = "0.59.0"
serde_json = "1.0"
rustdoc-json = "0.9.10"
clap = { version = "4.6", features = ["derive"] }
ureq = "3.3.0"
ruzstd = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
